--- a/styles/style.css
+++ b/styles/style.css
@@ -1,50 +1,43 @@
-/* Basic styles */
+/* style.css */
 
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
-    line-height: 1.6;
     background-color: #f9f9f9;
+    color: #333;
   }
   
-  header nav ul {
+  header, nav, main, footer {
+    max-width: 900px;
+    margin: auto;
+    padding: 1em;
+  }
+  
+  nav ul {
+    list-style-type: none;
     display: flex;
-    justify-content: center;
-    background-color: #333;
-    list-style: none;
-    margin: 0;
-    padding: 1em 0;
+    gap: 1em;
+    padding: 0;
   }
   
-  header nav ul li {
-    margin: 0 1em;
-  }
-  
-  header nav ul li a {
-    color: #fff;
+  nav a {
     text-decoration: none;
-    font-weight: bold;
+    color: #007acc;
   }
   
-  header nav ul li a:hover {
+  nav a:hover {
     text-decoration: underline;
   }
   
-  main {
-    max-width: 800px;
-    margin: 2em auto;
-    padding: 0 1em;
-  }
-  
-  section {
-    margin-bottom: 2em;
+  h1, h2 {
+    color: #222;
   }
   
   footer {
     text-align: center;
-    padding: 1em 0;
-    background-color: #333;
-    color: white;
+    font-size: 0.9em;
+    color: #666;
+    padding-bottom: 1em;
   }
   
