Add Chamber Discover Page with responsive grid, JSON data, and visit message

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -1,5 +1,11 @@
+/* Medium screens 641px to 1024px */
 @media (min-width: 641px) and (max-width: 1024px) {
-  .attractions-grid {
+  .grid-container {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-areas:
+      "card1 card2"
+      "card3 card4"
+      "card5 card6"
+      "card7 card8";
   }
 }
