Add discover page with dynamic POIs and visit message

--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -54,3 +54,31 @@ main {
   width: 100%;
   height: auto;
 }
+
+/* Medium screens 641px+ */
+@media screen and (min-width: 641px) {
+  .grid-container {
+    grid-template-areas:
+      "card1 card2"
+      "card3 card4"
+      "card5 card6"
+      "card7 card8";
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .card img:hover {
+    transform: scale(1.05);
+    filter: brightness(1.1);
+    transition: all 0.3s ease-in-out;
+  }
+}
+
+/* Large screens 1025px+ */
+@media screen and (min-width: 1025px) {
+  .grid-container {
+    grid-template-areas:
+      "card1 card2 card3 card4"
+      "card5 card6 card7 card8";
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
